--- a/UI/signup.html
+++ b/UI/signup.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Book-a-Meal | signup</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <link href="https://fonts.googleapis.com/css?family=Acme|Anton|Fugaz+One|Great+Vibes|Parisienne|Cookie|Lobster+Two|Satisfy"
         rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -43,9 +43,10 @@
 
         <!--Sign up -->
         <section id="signup" class="container">
-            <div>
-                <h1>Signup</h1>
+            <div class="form-box">
+               
                 <form>
+                    <h1>Signup</h1>
                     <label for="Fullname"></label>
                     <input type="text" name="fullname" id="fullname" class="fa" placeholder="&#xf007  Fullname">
                     <br>
