--- a/UI/signin.html
+++ b/UI/signin.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Book-a-Meal | signin</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <link href="https://fonts.googleapis.com/css?family=Acme|Anton|Fugaz+One|Great+Vibes|Parisienne|Cookie|Lobster+Two|Satisfy"
         rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -43,9 +43,10 @@
 
         <!--Login Section -->
         <section id="login" class="container">
-            <div >
-                <h1>Login</h1>
-                <form>
+            <div class="form-box">
+               
+                <form action="menu.html">
+                        <h1>Login</h1>
                     <label for="username"></label>
                     <input type="text" name="username" id="username" class="fa" placeholder="&#xf007  Username">
                     <br>
