--- a/UI/admin/menu.html
+++ b/UI/admin/menu.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Book-a-Meal | Menu</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./../style.css">
+    <link rel="stylesheet" href="./../styles/style.css">
     <link href="https://fonts.googleapis.com/css?family=Acme|Anton|Fugaz+One|Great+Vibes|Parisienne|Cookie|Lobster+Two|Satisfy"
         rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -43,7 +43,7 @@
                 <div class="menu-icon">
                     <i class="fa fa-bars fa-2x"></i>
                 </div>
-                <div class="menu-sidebar">
+                <div class="sidebar">
                     <ul>
                         <li>
                             <a href="home.html">Meals</a>
@@ -55,7 +55,10 @@
                             <a href="order.html">Order</a>
                         </li>
                         <li>
-                            <a href="signout.html">Sign out</a>
+                            <a href="index.html">Add Admin</a>
+                        </li>
+                        <li>
+                            <a href="login.html">Sign out</a>
                         </li>
                     </ul>
                 </div>
@@ -64,7 +67,7 @@
             <div class="mainboard">
                 <section id="board">
                     <div class="">
-                            <h1 style="text-align: left;">Admin Menu</h1>
+                            <h1 style="text-align: left;">Admin-Menu</h1>
                         <table>
                             <thead>
                                 <tr>
