--- a/UI/admin/order.html
+++ b/UI/admin/order.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Book-a-Meal | Admin</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./../style.css">
+    <link rel="stylesheet" href="./../styles/style.css">
     <link href="https://fonts.googleapis.com/css?family=Acme|Anton|Fugaz+One|Great+Vibes|Parisienne|Cookie|Lobster+Two|Satisfy"
         rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -43,7 +43,7 @@
                 <div class="menu-icon">
                     <i class="fa fa-bars fa-2x"></i>
                 </div>
-                <div class="menu-sidebar">
+                <div class="sidebar">
                     <ul>
                         <li>
                             <a href="home.html">Meals</a>
@@ -55,7 +55,10 @@
                             <a href="order.html" class="current">Order</a>
                         </li>
                         <li>
-                            <a href="signout.html">Sign out</a>
+                            <a href="index.html">Add Admin</a>
+                        </li>
+                        <li>
+                            <a href="login.html">Sign out</a>
                         </li>
                     </ul>
                 </div>
@@ -71,6 +74,7 @@
                                     <td colspan="4" id="edit-meal">
                                         <label for="">Day</label>
                                         <input type="date" name="date" value="">
+
                                     </td>
                                 </tr>
                                 <tr>
@@ -78,6 +82,7 @@
                                     <td>Customer</td>
                                     <td>Meal</td>
                                     <td>Amount(&#8358;)</td>
+
                                 </tr>
                             </thead>
                             <tbody>
@@ -86,26 +91,30 @@
                                     <td>Mr Ab</td>
                                     <td>Jollof</td>
                                     <td>10,000</td>
-                                </tr>
 
+                                </tr>
                                 <tr>
-                                    <td>2</td>
-                                    <td>Pet</td>
-                                    <td>Amala</td>
-                                    <td>15,000</td>
-                                    
-                                </tr>
+                                    <tr>
+                                        <td>2</td>
+                                        <td>Pet</td>
+                                        <td>Amala</td>
+                                        <td>15,000</td>
 
+                                    </tr>
+                                </tr>
                                 <tr>
-                                    <td>3</td>
-                                    <td>Mr Tutu</td>
-                                    <td>Ofada</td>
-                                    <td>11,000</td>
-                                </tr>
+                                    <tr>
+                                        <td>3</td>
+                                        <td>Mr Tutu</td>
+                                        <td>Ofada</td>
+                                        <td>11,000</td>
 
+                                    </tr>
+                                </tr>
                                 <tr>
                                     <td colspan="4" id="total"> Total(&#8358;) = 15000</td>
                                 </tr>
+
                             </tbody>
                         </table>
                     </div>
