--- a/UI/index.html
+++ b/UI/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Book-a-Meal | welcome</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <link href="https://fonts.googleapis.com/css?family=Acme|Anton|Fugaz+One|Great+Vibes|Parisienne|Cookie|Lobster+Two|Satisfy"
         rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -40,8 +40,7 @@
                     <a href="#section-c" class="fa fa-chevron-circle-down"></a>
                 </div>
             </div>
-        </div>
-        
+        </div>  
     </header>
 
     <!-- Main -->
@@ -98,7 +97,6 @@
                 <a href="signin.html" class="btns">Connect</a>
             </div>
         </section>
-
     </main>
 
     <!--footer-->
