--- a/UI/menu.html
+++ b/UI/menu.html
@@ -51,7 +51,7 @@
                     <a id="status">Status</a>
                 </li>
                 <li>
-                    <a href="">Your orders</a>
+                    <a href="myOrder.html">my order</a>
                 </li>
                 <li>
                     <a href="index.html">Sign out</a>
