--- a/UI/index.html
+++ b/UI/index.html
@@ -46,8 +46,8 @@
     <!-- Main -->
     <main id="main">
 
-        <!-- Section A-->
-        <section id="section-a" class="grid">
+        <!-- Service-->
+        <section id="service" class="grid">
             <div class="content-wrap">
                 <h2 class="content-title"> What we do </h2>
                
@@ -57,8 +57,8 @@
             </div>
         </section>
 
-        <!--section B-->
-        <section id="section-b" class="grid">
+        <!--Foodshowcase-->
+        <section id="food_showcase" class="grid">
             <div class="content-wrap">
                 <div class="box content-text">
                     <img src="images/local-delicacy.jpg" alt="">
@@ -89,8 +89,8 @@
             </div>
         </section>
 
-        <!--section c-->
-        <section id="section-c" class="grid">
+        <!--Connect-->
+        <section id="connect" class="grid">
             <div class="fixed-image">
             </div>
             <div class="content-wrap">
