157204223-gh-pages-feedback: changed the color of the page

--- a/UI/admin/home.html
+++ b/UI/admin/home.html
@@ -35,7 +35,7 @@
             <div class="dashboard">
                 <div class="logo">
                     <a href="#">
-                        <img src="./../images/logo.jpg" alt="">
+        
                     </a>
                 </div>
                 <div class="menu-icon">
@@ -44,7 +44,7 @@
                 <div class="sidebar">
                     <ul>
                         <li>
-                            <a href="home.html" class="current">Home</a>
+                            <a href="home.html" class="current">Meals</a>
                         </li>
                         <li>
                             <a href="menu.html">Menu</a>
