157204223-gh-pages-feedback: changed the color of the page

--- a/UI/index.html
+++ b/UI/index.html
@@ -8,7 +8,7 @@
     <title>Book-a-Meal | welcome</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Acme|Anton|Fugaz+One|Great+Vibes|Parisienne|Cookie|Lobster+Two|Satisfy"
+    <link href="https://fonts.googleapis.com/css?family=Acme|Anton|Fugaz+One|Great+Vibes|Parisienne|Cookie|Lobster+Two|Satisfy|Kanit"
         rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -22,7 +22,7 @@
                 <i class="fa fa-bars fa-2x"></i>
             </div>
             <div class="logo">
-                <a href="index.html"><img src="images/logo.jpg" alt=""></a>
+                <a href="index.html"></a>
             </div>
             <div class="menu">
                 <ul>
@@ -37,7 +37,6 @@
                 <div>
                     <h1>Book a Meal</h1>
                     <p>Let's give you a life without having to worry about what to eat everyday of the week, Just Book a Meal.</p>
-                    <a href="#section-c" class="fa fa-chevron-circle-down"></a>
                 </div>
             </div>
         </div>  
@@ -103,12 +102,9 @@
     <footer id="footer" class="grid">
         <div class="content-wrap">
             <div>
-                <p>connect us at</p>
+                
             </div>
-            <a href="#" class="fa fa-facebook"></a>
-            <a href="#" class="fa fa-twitter"></a>
-            <a href="#" class="fa fa-instagram"></a>
-            <a href="#" class="fa fa-youtube"></a>
+            
             <p>&copy; 2018 TmD</p>
         </div>
     </footer>
