--- a/UI/admin/home.html
+++ b/UI/admin/home.html
@@ -35,7 +35,7 @@
             <div class="dashboard">
                 <div class="logo">
                     <a href="#">
-        
+
                     </a>
                 </div>
                 <div class="menu-icon">
@@ -69,7 +69,7 @@
                         <table>
                             <thead>
                                 <tr>
-                                    <td colspan="7" id="add-meal">
+                                    <td colspan="8" id="add-meal">
                                         <a>Add-Meal</a>
                                     </td>
                                 </tr>
@@ -79,57 +79,72 @@
                                     <td>Category</td>
                                     <td>Amount(&#8358;)</td>
                                     <td>Image</td>
+                                    <td>check</td>
                                     <td>Edit</td>
                                     <td>Delete</td>
                                 </tr>
                             </thead>
                             <tbody>
-                                    <tr>
-                                        <td>1</td>
-                                        <td>Jollof Rice</td>
-                                        <td>Intercontinental-dish</td>
-                                        <td>10,000</td>
-                                        <td>
-                                            <a class="fa image" id="img1">&#xf03e</a>
-                                        </td>
-                                        <td class="edit-Meal">
-                                            <a class="fa">&#xf044</a>
-                                        </td>
-                                        <td class="del-Meal">
-                                            <a class="fa">&#xf00d</a>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>2</td>
-                                        <td>Amala</td>
-                                        <td>Local</td>
-                                        <td>15,000</td>
-                                        <td>
-                                            <a class="fa image" id="img1">&#xf03e</a>
-                                        </td>
-                                        <td class="edit-Meal">
-                                            <a class="fa">&#xf044</a>
-                                        </td>
-                                        <td class="del-Meal">
-                                            <a class="fa">&#xf00d</a>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>3</td>
-                                        <td>Ofada Rice</td>
-                                        <td>Local</td>
-                                        <td>11,000</td>
-                                        <td>
-                                            <a class="fa image" id="img1">&#xf03e</a>
-                                        </td>
-                                        <td class="edit-Meal">
-                                            <a class="fa">&#xf044</a>
-                                        </td>
-                                        <td class="del-Meal">
-                                            <a class="fa">&#xf00d</a>
-                                        </td>
-                                    </tr>
-                                </tbody>                          
+                                <tr>
+                                    <td>1</td>
+                                    <td>Jollof Rice</td>
+                                    <td>Intercontinental-dish</td>
+                                    <td>10,000</td>
+                                    <td>
+                                        <a class="fa image" id="img1">&#xf03e</a>
+                                    </td>
+                                    <td>
+                                        <input type="checkbox" name="remember" id="remember"> </td>
+                                    <td class="edit-Meal">
+                                        <a class="fa">&#xf044</a>
+                                    </td>
+                                    <td class="del-Meal">
+                                        <a class="fa">&#xf00d</a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>2</td>
+                                    <td>Amala</td>
+                                    <td>Local</td>
+                                    <td>15,000</td>
+                                    <td>
+                                        <a class="fa image" id="img1">&#xf03e</a>
+                                    </td>
+                                    <td>
+                                        <input type="checkbox" name="remember" id="remember"> </td>
+                                    <td class="edit-Meal">
+                                        <a class="fa">&#xf044</a>
+                                    </td>
+                                    <td class="del-Meal">
+                                        <a class="fa">&#xf00d</a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>3</td>
+                                    <td>Ofada Rice</td>
+                                    <td>Local</td>
+                                    <td>11,000</td>
+                                    <td>
+                                        <a class="fa image" id="img1">&#xf03e</a>
+                                    </td>
+                                    <td>
+                                        <input type="checkbox" name="remember" id="remember"> </td>
+                                    <td class="edit-Meal">
+                                        <a class="fa">&#xf044</a>
+                                    </td>
+                                    <td class="del-Meal">
+                                        <a class="fa">&#xf00d</a>
+                                    </td>
+                                </tr>
+                            </tbody>
+                            <tfoot>
+                                <tr>
+                                    <td colspan="8">
+                                        <button type="submit">Set Meal</button>
+
+                                    </td>
+                                </tr>
+                            </tfoot>
                         </table>
                     </div>
                 </section>
