--- a/UI/myOrder.html
+++ b/UI/myOrder.html
@@ -48,10 +48,7 @@
                     <a href="menu.html" >Order</a>
                 </li>
                 <li>
-                    <a id="status">Status</a>
-                </li>
-                <li>
-                    <a href="#" class="current">my order</a>
+                    <a href="#" class="current">My order</a>
                 </li>
                 <li>
                     <a href="index.html">Sign out</a>
@@ -72,7 +69,7 @@
                                 <td>Qty</td>
                                 <td>Category</td>
                                 <td>Amount(&#8358;)</td>
-                                <td>Image</td>
+                                <td>See meal</td>
                                 <td>Edit</td>
                                 <td>Delete</td>
                             </tr>
