--- a/UI/index.html
+++ b/UI/index.html
@@ -8,7 +8,7 @@
     <title>Book-a-Meal | welcome</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Acme|Anton|Fugaz+One|Great+Vibes|Parisienne|Cookie|Lobster+Two|Satisfy|Kanit"
+    <link href="https://fonts.googleapis.com/css?family=Acme|Great+Vibes|Parisienne|Cookie|Kanit|Poiret+One"
         rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -36,7 +36,7 @@
             <div class="content-wrap words">
                 <div>
                     <h1>Book a Meal</h1>
-                    <p>Let's give you a life without having to worry about what to eat everyday of the week, Just Book a Meal.</p>
+                    <p>Let's give you a life without having to worry about what to eat everyday, Have it while it is hot</p>
                 </div>
             </div>
         </div>  
